--- a/ejercicios_basico/ejercicio_javascript_num1.html
+++ b/ejercicios_basico/ejercicio_javascript_num1.html
@@ -21,6 +21,7 @@ primera celda de la primera fila a "Hola". -->
     <script>
         let tabla = document.querySelector("#miTabla");
         tabla.getElementsByTagName("td")[0].textContent = "Hola";
+        // tabla.rows[0].cells[1].textContent = "Hola";
     </script>
 </body>
 
